--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,14 @@
     <!-- Strings related to main map activity -->
     <string name="sign_out_button">Sign Out</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- Strings related to the create pin fragment -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create_pin_name">Name</string>
+    <string name="photo_text_view">Photo:</string>
+    <string name="upload_text_view">Upload:</string>
+    <string name="description_text_view">Description:</string>
+    <string name="best_photo_time_text_view">Best Time for Photo:</string>
+    <string name="instructions_text_view">Instructions</string>
+    <string name="save_pin_button">Save</string>
+    <string name="discard_button">Discord</string>
 </resources>
