All pin details now stored on RealTime DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,12 @@
     <string name="instructions_text_view">Instructions</string>
     <string name="save_pin_button">Save</string>
     <string name="discard_button">Discord</string>
+    <!-- Strings for spinners -->
+    <string-array name="best_Photo_Time">
+        <item>Sunrise</item>
+        <item>Sunset</item>
+        <item>Midday</item>
+        <item>Night</item>
+        <item>Any</item>
+    </string-array>
 </resources>
