--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,16 @@
 
     <string name="photo_preview">photoPreview</string>
 
+    <!-- Strings used for create pin -->
+    <string name="review_name">Name:</string>
+    <string name="review_photo">Photo:</string>
+    <string name="review_photo_description">photoPreview</string>
+    <string name="review_upload">Upload:</string>
+    <string name="review_description">Description:</string>
+    <string name="review_best_photo_time">Best Time:</string>
+    <string name="review_instructions">Instructions</string>
+    <string name="review_upload_button">Upload</string>
+    <string name="review_discard">Discard</string>
+    <string name="review_save">Save</string>
+
 </resources>
